# options-owl

./: .gitignore  CLAUDE.md  Dockerfile  NEW_ACCOUNT_SETUP.md  docker-compose.yml  put_winner_analysis.txt  pyproject.toml  restart.sh
docs/: exit_v3_design.md  ml_signal_sourcing_plan.md  pg_deploy_checklist.md  simpsons_agent_analysis.md
options_owl/: bot_runner.py  harvester.py  main.py
scripts/: README.md  agent_summary.py  analyze_down_days.py  analyze_gate_impact.py  analyze_put_patterns.py  archive_harvester.sh  b2_pointintime_cached.py  b4_intraday_gex_test.py  babysit.sh  backfill_dca_pnl.py  backfill_fill_prices.py  backfill_historical_options.py  backfill_missing_bars.py  backfill_pg_trades.py  backfill_real_stock_ohlc.py  backfill_stock_candles.py  backfill_stock_ohlc_polygon.py  backfill_supabase.py  backtest_category_sweep.py  backtest_checkpoint_sweep.py  backtest_dca.py  backtest_dca_guardrails.py  backtest_dip_confirm_v2.py  backtest_down_day_puts.py  backtest_down_day_puts_multi.py  backtest_early_pop.py  backtest_early_pop_candle.py  backtest_early_pop_deep.py  backtest_enrg_grace.py  backtest_exit_improvements.py  backtest_fast_momentum.py  backtest_flow_otm_test.py  backtest_gold_standard.py  backtest_gold_standard_v7.py  backtest_ladder_report.py  backtest_ml_peak_scaleout.py  backtest_multiday_filtered.py  backtest_multiday_flow.py  backtest_multiday_patience.py  backtest_multiday_smart_hold.py  (+147 more)
specs/: gold-standard-backtest-plan.md  lessons-learned-and-roadmap.md  volume-profitability-research.html
tests/: conftest.py  test_antimartingale_add.py  test_backtest.py  test_backtest_regime_features.py  test_bot_lifecycle.py  test_candle_cache.py  test_candle_collector.py  test_candle_ws_integration.py  test_check_chain_and_premium_lookup.py  test_circuit_breaker.py  test_code_review_fixes.py  test_concurrent_positions.py  test_conviction_sizing.py  test_dashboard.py  test_db_expanded.py  test_gex.py  (+65 more)
(+308 files in other folders)
