[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "options-owl"
version = "0.1.0"
description = "Options trading bot that reads Discord signals, scores them, and executes trades"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
    "yfinance>=0.2",
    "aiosqlite>=0.20",
    "webull-openapi-python-sdk>=2.0",
    "websockets>=13.0",
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    "asyncpg>=0.29",
    "numpy>=1.26",
    "redis>=5.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
